--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -96,6 +96,7 @@
   box-shadow: 0 2px 4px 4px rgba(128,128,128,.25);
   color: white;
   background-color: rgba(128,128,128,0.75);
+  .dark & { background-color: rgba(0,0,0,0.75) }
   padding: 0 10px;
 
   width: auto;
