--- a/src/components/Racetrack/Racebar.scss
+++ b/src/components/Racetrack/Racebar.scss
@@ -10,6 +10,11 @@
   padding-right: 8px;
   padding-top: 8px;
   padding-bottom: 8px;
+
+  .dark & {
+    background-color: black;
+    box-shadow: 0 0 6px black;
+  }
 }
 
 .Racebar-wrap {
@@ -25,6 +30,7 @@
   @include fullHeight;
   padding-left: 8px;
   border-left: 1px solid $zorroa-nearwhite;
+  .dark & { border-left: 1px solid $zorroa-nearblack; }
 }
 
 .Racebar-widget {
@@ -36,7 +42,7 @@
   @include flexAlignItemsCenter;
 
   border-radius: 3px;
-  padding: 4px 8px;
+  padding: 3px 7px;
   margin: 2px 4px;
   color: $zorroa-greyish-brown;
   text-transform: uppercase;
@@ -44,9 +50,14 @@
   border: 1px solid transparent;
   cursor: pointer;
 
-  &:hover:not(.disabled) { background-color: $zorroa-nearwhite; border: 1px solid $zorroa-gray; }
+  &:hover:not(.disabled) {
+    background-color: $zorroa-nearwhite;
+    border: 1px solid $zorroa-gray;
+    .dark & { background-color: $zorroa-darkgray; border: 1px solid $zorroa-darkgray; }
+  }
   &.disabled { color: $zorroa-lightgray; background-color: transparent; cursor: default; }
 
+  .dark & { color: $zorroa-lightgray; background-color: $zorroa-gray; }
   div { margin-left: 8px; }
 }
 
@@ -56,14 +67,19 @@
 
   border-radius: 3px;
   padding: 4px 8px;
-  margin: 4px;
+  margin: 5px 4px;
   color: white;
   background-color: $zorroa-water-blue;
   text-transform: uppercase;
   cursor: pointer;
 
   &:hover:not(.disabled) { background-color: lighten($zorroa-water-blue, 15%); }
-  &.disabled { cursor: default; background-color: $zorroa-lightgray; }
+  &.disabled {
+    cursor: default;
+    background-color: $zorroa-lightgray;
+
+    .dark & { color: $zorroa-gray; background-color: $zorroa-darkgray; }
+  }
 
   div { margin-left: 8px; }
 }
