--- a/src/components/Assets/AssetCounter.scss
+++ b/src/components/Assets/AssetCounter.scss
@@ -11,6 +11,7 @@
   }
 
   .asset-counter-of {
+    .dark & { color: $zorroa-dimgray; }
     &:after {
       content: ' of ';
       font-size: 12px;
@@ -19,6 +20,7 @@
   }
 
   .asset-counter-results {
+    .dark & { color: $zorroa-dimgray; }
     &:after {
       content: ' RESULTS';
       font-size: 12px;
@@ -31,6 +33,7 @@
     margin-left: 8px;
     font-family: "Roboto Condensed";
     color: $zorroa-lightgray;
+    .dark & { color: $zorroa-dimgray; }
 
     &:hover {
       color: $zorroa-sickly-green;
