--- a/src/components/Collapsible/CollapsibleHeader.scss
+++ b/src/components/Collapsible/CollapsibleHeader.scss
@@ -15,6 +15,7 @@
   color: $zorroa-greyish-brown;
   background-color: $zorroa-darkwhite;
 
+  .dark & { background-color: $zorroa-greyish-brown; color: $zorroa-lightgray; }
   &.isOpen {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
@@ -22,6 +23,7 @@
 
   &:not(.isSelected):hover {
     background-color: $zorroa-whitegray;
+    .dark & { background-color: $zorroa-dimgray; }
   }
 
   &.isSelected {
