--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -24,11 +24,13 @@
     padding: 5px;
     border-radius: 3px;
 
+    .dark & { color: black; }
     &:focus {
       outline: none;
     }
     &:hover {
       background-color: white;
+      .dark & { background-color: $zorroa-dimgray; }
     }
   }
 
@@ -45,8 +47,9 @@
     top: 100%;
     right: 0;
     z-index: 1000;
-    box-shadow: 0 0 30px 0 $zorroa-gray;
+    box-shadow: 0 0 30px 0 $zorroa-nearblack;
     min-width: 240px;
+    .dark & { background-color: $zorroa-gray; }
   }
 
   .DropdownMenu-item {
@@ -62,6 +65,7 @@
       cursor: pointer;
       &:hover {
         background-color: $zorroa-nearwhite;
+        .dark & { background-color: $zorroa-dimgray; }
       }
     }
   }
@@ -76,11 +80,13 @@
     font-size: 10px;
     padding: 5px;
     color: $zorroa-gray;
+    .dark & { color: black; }
   }
 
   .DropdownMenu-separator {
     height: 1px;
     background-color: white;
+    .dark & { background-color: $zorroa-dimgray; }
     padding: 0;
   }
 }
