--- a/src/components/Metadata2/Metadata2.scss
+++ b/src/components/Metadata2/Metadata2.scss
@@ -4,7 +4,7 @@
 
   background-color: white;
 
-  &.dark { background-color: transparent; }
+  &.dark { background-color: rgba(0,0,0,0.65); }
 
   @include flexCol;
   .Metadata2-header {
