--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -14,6 +14,8 @@
 
   background-color: $zorroa-nearwhite;
 
+  .dark & { background-color: $zorroa-gray; }
+
   &.isIconified {
     cursor: e-resize;
     &.isRightEdge { cursor: w-resize; }
