--- a/src/components/Suggestions/Suggestions.scss
+++ b/src/components/Suggestions/Suggestions.scss
@@ -23,11 +23,13 @@
   left: 0;
   width: 100%;
   background: transparent;
+  .dark & { color: white; }
 }
 
 .Suggestions-typeahead {
   z-index: -1;
   color: $zorroa-lightgray;
+  .dark & { color: $zorroa-gray; }
   font-size: 14px;
   border: none;
   position: absolute;
@@ -65,6 +67,7 @@
 
   background-clip: padding-box;
   background-color: rgba(255, 255, 255, 0.85);
+  .dark & { background-color: rgba(0,0,0, 0.75); border: 1px solid $zorroa-darkgray; }
   border-radius: 3px;
   border: 1px solid $zorroa-lightgray;
   list-style-type: none;
@@ -85,6 +88,8 @@
   min-width: 100%;
   color: $zorroa-darkgray;
   line-height: 1.8;
+
+  .dark & { color: $zorroa-lightgray; }
 
   &:not(.selected):hover { color: $zorroa-sickly-green; }
   &.selected { background-color: rgba(192, 192, 192, 0.5); }
