--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -12,6 +12,8 @@
   left: 0;
   right: 0;
   bottom: 0;
+
+  &.dark { background-color: $zorroa-gray; }
 }
 
 .App-dropzone {
@@ -40,6 +42,7 @@
   background-color: $zorroa-nearwhite;
   overflow: hidden;
 
+  .dark & { background-color: $zorroa-gray; }
   & .Workspace-vertical-separator {
     height: 100%;
     width: 1px;
