--- a/src/styles/core-globals.scss
+++ b/src/styles/core-globals.scss
@@ -56,6 +56,7 @@ input,input:focus,button,button:focus,.form-control,.form-control:focus {
 }
 ::-webkit-scrollbar-thumb {
   background: $zorroa-gray;
+  .dark & { background: $zorroa-dimgray; }
   border-radius: 3px;
   &:hover {
     background: $zorroa-sickly-green;
