--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -40,7 +40,9 @@ $zorroa-orange-taupe   : #7d6358;
 
 // A few extra useful colors Amber didn't specify
 
+$zorroa-nearblack  : #303030;
 $zorroa-darkgray   : #4a4a4a;
+$zorroa-dimgray    : #606060;
 $zorroa-gray       : #808080;
 $zorroa-whitegray  : #b3b3b3;
 $zorroa-lightgray  : #c3c3c3;
