--- a/src/components/Metadata2/Metadata2.scss
+++ b/src/components/Metadata2/Metadata2.scss
@@ -127,7 +127,10 @@
     background-color: $zorroa-hover;
     .Metadata2.dark & { background-color: rgba(255,255,255, 0.1); }
   }
-  &.isSelected { background-color: $zorroa-selected; }
+  &.isSelected {
+    background-color: $zorroa-selected;
+    .dark & { background-color: $zorroa-dark-selected; }
+  }
 }
 
 .Metadata2-leaf-title {
