--- a/src/components/Racetrack/Collections.scss
+++ b/src/components/Racetrack/Collections.scss
@@ -21,6 +21,7 @@
 
 .Collections-folder {
   @include flexRowCenter;
+  color: black;
   background-color: $zorroa-lightgray;
   border-radius: 3px;
   padding: 4px 8px;
