--- a/src/components/Racetrack/Exists.scss
+++ b/src/components/Racetrack/Exists.scss
@@ -18,8 +18,8 @@
   }
 
   .Exists-body {
-    background-color: white;
-    color: $zorroa-gray;
+    //background-color: white;
+    //color: $zorroa-gray;
     display: flex;
     flex-direction: column;
     padding: 10px;
