--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -51,6 +51,7 @@ $zorroa-nearwhite  : #ededed;
 $zorroa-transparent: transparent;
 
 $zorroa-selected       : #D1E3F6;
+$zorroa-dark-selected  : $zorroa-water-blue;
 $zorroa-hover          : rgba(0,0,0,0.1);
 $zorroa-dropzone       : rgba(115, 182, 28, 0.75);
 
