--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -5,6 +5,8 @@
   display: inline-block;
   position:relative;
 
+  .dark & { color: $zorroa-nearwhite; }
+
   .DropdownMenu-button {
     @include flexRowCenter;
     flex-wrap: nowrap;
@@ -15,22 +17,19 @@
     //background-color: #fff;
     border: 1px solid transparent;
     box-sizing: border-box;
-    color: #444444;
     cursor: pointer;
     font-size: 14px;
-    padding: 0;
     white-space: nowrap;
     text-transform: uppercase;
     padding: 5px;
     border-radius: 3px;
 
-    .dark & { color: black; }
     &:focus {
       outline: none;
     }
     &:hover {
       background-color: white;
-      .dark & { background-color: $zorroa-dimgray; }
+      .dark & { color: white; background-color: $zorroa-dimgray; }
     }
   }
 
@@ -49,7 +48,7 @@
     z-index: 1000;
     box-shadow: 0 0 30px 0 $zorroa-nearblack;
     min-width: 240px;
-    .dark & { background-color: $zorroa-gray; }
+    .dark & { color: $zorroa-nearwhite; background-color: $zorroa-gray; }
   }
 
   .DropdownMenu-item {
@@ -65,14 +64,15 @@
       cursor: pointer;
       &:hover {
         background-color: $zorroa-nearwhite;
-        .dark & { background-color: $zorroa-dimgray; }
+        .dark & { color: white; background-color: $zorroa-dimgray; }
       }
     }
   }
 
   a {
     cursor: pointer;
-    color: #444444;
+    color: $zorroa-darkgray;
+    .dark & { color: $zorroa-nearwhite; }
     font-size: 1rem;
   }
 
@@ -80,7 +80,7 @@
     font-size: 10px;
     padding: 5px;
     color: $zorroa-gray;
-    .dark & { color: black; }
+    .dark & { color: $zorroa-nearwhite; }
   }
 
   .DropdownMenu-separator {
