--- a/src/components/Folders/FolderItem.scss
+++ b/src/components/Folders/FolderItem.scss
@@ -23,13 +23,19 @@ $FolderItemHeight : 25px;
   .dark & { background-color: #555; }
   &:nth-child(even) {
     background-color: white;
-    &.isSelected { background-color: $zorroa-selected; }
+    &.isSelected {
+      background-color: $zorroa-selected;
+      .dark & { background-color: $zorroa-dark-selected; }
+    }
     .dark & { background-color: $zorroa-darkgray; }
   }
 
   &:hover:not(.isSelected) { background-color: $zorroa-hover; }
 
-  &.isSelected { background-color: $zorroa-selected; }
+  &.isSelected {
+    background-color: $zorroa-selected;
+    .dark & { background-color: $zorroa-dark-selected; }
+  }
   &.isDropTarget.dragHover { color: white; background-color: $zorroa-sickly-green; }
   &.isSelected.isDropTarget.dragHover { color: white; background-color: darken($zorroa-sickly-green, 15%); }
 
@@ -47,7 +53,10 @@ $FolderItemHeight : 25px;
   color: $zorroa-gray;
 
   &.hasChildren:not(.isSelected):hover { color: white; background-color: $zorroa-darkgray; }
-  .FolderItem.isSelected & { background-color: $zorroa-selected; }
+  .FolderItem.isSelected & {
+    background-color: $zorroa-selected;
+    .dark & { background-color: $zorroa-dark-selected; }
+  }
   .FolderItem.isSelected &.hasChildren:not(.isSelected):hover { color: white; background-color: $zorroa-darkgray; }
   .FolderItem.isDropTarget.dragHover & { color: white; background-color: $zorroa-sickly-green; }
   .FolderItem.isSelected.isDropTarget.dragHover & { color: white; background-color: darken($zorroa-sickly-green, 15%); }
@@ -61,7 +70,10 @@ $FolderItemHeight : 25px;
   @include fullWidth;
 
   padding-left: 5px;
-  .FolderItem.isSelected &       { background-color: $zorroa-selected; }
+  .FolderItem.isSelected & {
+    background-color: $zorroa-selected;
+    .dark & { background-color: $zorroa-dark-selected; }
+  }
   // .FolderItem.isSelected &:hover { color: white; background-color: darken($zorroa-gray, 15%); }
   .FolderItem.isDropTarget.dragHover & { color: white; background-color: $zorroa-sickly-green; }
   .FolderItem.isSelected.isDropTarget.dragHover & { color: white; background-color: darken($zorroa-sickly-green, 15%); }
