--- a/src/components/Folders/Folders.scss
+++ b/src/components/Folders/Folders.scss
@@ -95,6 +95,7 @@
   &.disabled {
     cursor: not-allowed;
     background-color: $zorroa-lightgray;
+    .dark & { background-color: $zorroa-darkgray; }
   }
 
   &:not(.disabled) {
