--- a/src/components/Racetrack/Racetrack.scss
+++ b/src/components/Racetrack/Racetrack.scss
@@ -10,6 +10,7 @@
 }
 
 .Racetrack-widget {
-  background-color: #fff;
+  //background-color: #fff;
   margin-bottom: 6px;
+  //.dark & { color: $zorroa-lightgray; background-color: $zorroa-darkgray; }
 }
