--- a/src/components/Racetrack/WidgetHeader.scss
+++ b/src/components/Racetrack/WidgetHeader.scss
@@ -9,6 +9,7 @@
   cursor: pointer;
   color: $zorroa-gray;
   background-color: $zorroa-darkwhite;
+
   position: relative;
   & .WidgetHeader-enable { filter: none; }
 
@@ -29,10 +30,8 @@
   height: 100%;
 
   background-color: transparent;
-  &:hover { background-color: rgba(0,0,0,0.2); }
-  .hoverField & {
-    background-color: rgba(255,255,255,0.5);
-  }
+  &:hover { background-color: rgba(0,0,0,0.1); }
+  .hoverField & { background-color: rgba(255,255,255,0.5); }
 }
 
 .WidgetHeader-toggle {
