--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -14,7 +14,7 @@
     position: relative;
     border-radius: 3px;
     border: 1px solid $zorroa-lightgray;
-    &.dark { border: 1px solid $zorroa-darkgray; }
+    .dark & { border: 1px solid $zorroa-darkgray; }
   }
 }
 
