--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -48,6 +48,7 @@
     height: 100%;
     width: 1px;
     border-right: 1px solid $zorroa-lightgray;
+    .dark & { border-right: 1px solid $zorroa-darkgray; }
   }
 
   .Metadata-icon {
