--- a/src/components/Racetrack/SimilarHash.scss
+++ b/src/components/Racetrack/SimilarHash.scss
@@ -151,7 +151,7 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid $zorroa-nearwhite;
-  .dark & { border-bottom: 5px solid $zorroa-nearblack; }
+  .dark & { border-bottom: 5px solid $zorroa-dimgray; }
 }
 
 .SimilarHash-snap-selected {
