--- a/src/components/Racetrack/Widget.scss
+++ b/src/components/Racetrack/Widget.scss
@@ -7,12 +7,12 @@
 .Widget-body {
   filter: grayscale(100%) opacity(50%);
   min-width: 100%;
-  .dark & { color: $zorroa-lightgray; background-color: $zorroa-darkgray; }
+  .dark & { color: $zorroa-whitegray; background-color: black; }
 
   &.floatBody {
     z-index: 10000;
     background-color: white;
-    .dark & { color: $zorroa-lightgray; background-color: $zorroa-darkgray; }
+    .dark & { color: $zorroa-whitegray; background-color: black; }
     position: absolute;
     top: 100%;
     right: 0;
