--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -5,7 +5,7 @@
   display: inline-block;
   position:relative;
 
-  .dark & { color: $zorroa-nearwhite; }
+  .dark & { color: $zorroa-whitegray; }
 
   .DropdownMenu-button {
     @include flexRowCenter;
@@ -29,7 +29,7 @@
     }
     &:hover {
       background-color: white;
-      .dark & { color: white; background-color: $zorroa-dimgray; }
+      .dark & { color: $zorroa-whitegray; background-color: $zorroa-dimgray; }
     }
   }
 
@@ -48,7 +48,7 @@
     z-index: 1000;
     box-shadow: 0 0 30px 0 $zorroa-nearblack;
     min-width: 240px;
-    .dark & { color: $zorroa-nearwhite; background-color: $zorroa-gray; }
+    .dark & { color: $zorroa-whitegray; background-color: $zorroa-greyish-brown; }
   }
 
   .DropdownMenu-item {
@@ -64,7 +64,7 @@
       cursor: pointer;
       &:hover {
         background-color: $zorroa-nearwhite;
-        .dark & { color: white; background-color: $zorroa-dimgray; }
+        .dark & { color: $zorroa-whitegray; background-color: $zorroa-dimgray; }
       }
     }
   }
@@ -72,7 +72,7 @@
   a {
     cursor: pointer;
     color: $zorroa-darkgray;
-    .dark & { color: $zorroa-nearwhite; }
+    .dark & { color: $zorroa-whitegray; }
     font-size: 1rem;
   }
 
@@ -80,7 +80,7 @@
     font-size: 10px;
     padding: 5px;
     color: $zorroa-gray;
-    .dark & { color: $zorroa-nearwhite; }
+    .dark & { color: $zorroa-whitegray; }
   }
 
   .DropdownMenu-separator {
