--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -6,6 +6,7 @@
 
   .icon-search {
     color: $zorroa-gray;
+    .dark & { color: $zorroa-greyish-brown; }
   }
 
   &.box {
@@ -14,7 +15,7 @@
     position: relative;
     border-radius: 3px;
     border: 1px solid $zorroa-lightgray;
-    .dark & { border: 1px solid $zorroa-darkgray; }
+    .dark & { border: 1px solid $zorroa-darkgray; background-color: $zorroa-whitegray; }
   }
 }
 
@@ -30,7 +31,7 @@
   background: transparent;
   color: $zorroa-darkgray;
 
-  .Filter.dark & { color: $zorroa-lightgray; }
+  .Filter.dark & { color: $zorroa-greyish-brown; }
 
   .Filter.box & {
     border: none;
