--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
   height: 42px;
   position: relative;
   background-color: $zorroa-nearwhite;
-  .dark & { background-color: $zorroa-gray; }
+  .dark & { background-color: $zorroa-nearblack; }
 }
 
 // Box to left-justify the logo and search
@@ -22,7 +22,9 @@
 
 // Adjust the logo size so search starts at expanded sidebar
 .header-logo {
-  height: 28px;
+  @include fullHeight;
+  @include flexRowCenter;
+  //height: 28px;
   //padding-top: 6px;
   //padding-left: 22px;
   margin-right: 20px;
@@ -45,6 +47,7 @@
     @include flexAlignItemsCenter;
     white-space: nowrap;
     color: $zorroa-greyish-brown;
+    .dark & { color: $zorroa-whitegray; }
     text-transform: uppercase;
 
     div {
@@ -63,6 +66,7 @@
     }
 
     &[class*='icon-zorroa-person-'] {
+      .dark & { color: $zorroa-whitegray; }
       font-size: 30px;
     }
   }
