--- a/src/components/Racetrack/Filetype.scss
+++ b/src/components/Racetrack/Filetype.scss
@@ -47,7 +47,7 @@
   background-color: $zorroa-lightgray;
   color: $zorroa-greyish-brown;
   .dark & {
-    color: $zorroa-lightgray;
+    color: $zorroa-whitegray;
     background-color: $zorroa-dimgray;
   }
 }
@@ -55,7 +55,7 @@
 .Filetype-remove-ext {
   font-size: 10px;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-lightgray; }
+  .dark & { color: $zorroa-whitegray; }
   margin-left: 6px;
   cursor: pointer;
   &:hover {
@@ -81,7 +81,7 @@
   font-family: "Roboto Condensed";
   text-transform: uppercase;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-lightgray; }
+  .dark & { color: $zorroa-whitegray; }
   margin-top: 4px;
   margin-bottom: 8px;
 }
@@ -102,7 +102,7 @@
 .Filetype-group-icon {
   margin-right: 4px;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-lightgray; }
+  .dark & { color: $zorroa-whitegray; }
 }
 
 .Filetype-group-label {
@@ -111,7 +111,7 @@
   min-height: 12px;
   font-size: 12px;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-lightgray; }
+  .dark & { color: $zorroa-whitegray; }
   margin-right: 10px;
   @include nowrap;
 
@@ -152,7 +152,7 @@
   text-transform: uppercase;
   font-size: 12px;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-lightgray; }
+  .dark & { color: $zorroa-whitegray; }
   min-height: 12px;
 
   .Filetype-type.disabled & {
@@ -167,7 +167,7 @@
   min-height: 12px;
   font-size: 12px;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-lightgray; }
+  .dark & { color: $zorroa-whitegray; }
   margin-right: 10px;
   @include nowrap;
 
@@ -206,7 +206,7 @@
 
 .Filetype-suggestions-search-icon {
   color: $zorroa-gray;
-  .dark & { color: $zorroa-lightgray; }
+  .dark & { color: $zorroa-whitegray; }
   width: 14px;
   height: 14px;
   margin-right: 2px;
