--- a/src/components/Racetrack/Range.scss
+++ b/src/components/Racetrack/Range.scss
@@ -29,7 +29,7 @@
       padding-right: 8px;
       width: 100%;
       min-width: 0;
-      .dark & { color: white; }
+      .dark & { color: $zorroa-whitegray; }
     }
   }
 
