--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -21,7 +21,7 @@ $tableResizeRightPadding: 20px;
   // height is defined in JSX
   min-width: 100%;
   background-color: #fff;
-  .dark & { background-color: $zorroa-nearblack; }
+  .dark & { background-color: $zorroa-greyish-brown; }
 
   padding-right: $tableResizeRightPadding;
 
@@ -67,7 +67,7 @@ $tableResizeRightPadding: 20px;
 
 .Table-header-sort-order-0 {
   color: $zorroa-darkgray;
-  .dark & { color: $zorroa-lightgray; }
+  .dark & { color: $zorroa-whitegray; }
 }
 
 .Table-header-sort-order-1 {
@@ -136,10 +136,10 @@ $tableResizeRightPadding: 20px;
   color: $zorroa-greyish-brown;
   border: 2px solid transparent;
 
-  .dark & { background-color: $zorroa-darkgray; }
+  .dark & { background-color: black; }
   &.even {
     background-color: #fff;
-    .dark & { background-color: $zorroa-nearblack; }
+    .dark & { background-color: $zorroa-lightblack; }
   }
   &.isSelected {
     background-color: $zorroa-selected;
@@ -158,6 +158,7 @@ $tableResizeRightPadding: 20px;
 
 .Table-body .Table-row:hover {
   background-color: $zorroa-hover;
+  .dark & { background-color: $zorroa-dark-hover; }
 }
 
 .Table-cell {
@@ -166,7 +167,7 @@ $tableResizeRightPadding: 20px;
   font-family: Roboto Condensed;
   cursor: default;
 
-  .dark & { color: $zorroa-lightgray; }
+  .dark & { color: $zorroa-whitegray; }
   &:not(.isOpen) { @include clampText; }
 }
 
@@ -194,7 +195,7 @@ $tableResizeRightPadding: 20px;
   font-size: 12px;
   font-family: Roboto Condensed;
   color: $zorroa-gray;
-  .dark & { color: $zorroa-nearwhite; }
+  .dark & { color: $zorroa-whitegray; }
 }
 
 .Table-title-tail {
