--- a/src/components/Table/TableField.scss
+++ b/src/components/Table/TableField.scss
@@ -42,7 +42,7 @@
 
 
     .Table-cell.dark & {
-      background-color: $zorroa-lightgray;
+      background-color: $zorroa-whitegray;
     }
   }
 }
@@ -59,7 +59,7 @@
   cursor: pointer;
 
   .Table-cell.dark & {
-    color: $zorroa-lightgray;
+    color: $zorroa-whitegray;
     background-color: rgba(255,255,255,0.1);
     cursor: default;
   }
