Darken rows. Fix metadata selection and hover. Darken QuickAdd and multipage stack shadows.

--- a/src/components/Folders/FolderItem.scss
+++ b/src/components/Folders/FolderItem.scss
@@ -20,7 +20,7 @@ $FolderItemHeight : 25px;
   }
 
   background-color: #f1f1f1;
-  .dark & { background-color: $zorroa-lightblack; }
+  .dark & { background-color: $zorroa-mattblack; }
   &:nth-child(even) {
     background-color: white;
     &.isSelected {
