--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -60,7 +60,7 @@
 
     .Facet-value-table-row:nth-child(odd) {
       background-color: $zorroa-nearwhite;
-      .dark & { background-color: $zorroa-lightblack; }
+      .dark & { background-color: $zorroa-mattblack; }
     }
 
     .Facet-value-table-row {
