--- a/src/components/Racetrack/QuickAddWidget.scss
+++ b/src/components/Racetrack/QuickAddWidget.scss
@@ -8,6 +8,7 @@
     top: 120%;
     left: 0;
     background-color: white;
+    .dark & { background-color: $zorroa-nearblack; }
     border-radius: 3px;
     box-shadow: 0 2px 6px 6px rgba(0,0,0, 0.15);
     padding-left: 8px;
