--- a/src/components/Table/TableField.scss
+++ b/src/components/Table/TableField.scss
@@ -60,18 +60,13 @@
 
   .Table-cell.dark & {
     color: $zorroa-whitegray;
-    background-color: rgba(255,255,255,0.1);
+    background-color: $zorroa-darkgray;
     cursor: default;
   }
 
-  &:not(.Table-cell.dark):hover {
+  &:not(.disabled):hover {
     color: #fff;
     background-color: $zorroa-sickly-green;
-
-    .Table-cell.dark & {
-      color: $zorroa-darkgray;
-      background-color: rgba(255,255,255,0.1);
-    }
   }
 }
 
