--- a/src/styles/core-globals.scss
+++ b/src/styles/core-globals.scss
@@ -51,7 +51,7 @@ input,input:focus,button,button:focus,.form-control,.form-control:focus {
 }
 ::-webkit-scrollbar-track {
   background: $zorroa-greyish-brown;
-  // box-shadow: inset 0px 1px 3px 0px rgba(0,0,0,0.50);
+  box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.50);
   border-radius: 3px;
 }
 ::-webkit-scrollbar-thumb {
