--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -40,8 +40,8 @@ $zorroa-orange-taupe   : #7d6358;
 
 // A few extra useful colors Amber didn't specify
 
+$zorroa-mattblack : #161616;
 $zorroa-nearblack  : #2e2e2e;
-$zorroa-lightblack : #373737;
 $zorroa-darkgray   : #4a4a4a;
 $zorroa-dimgray    : #606060;
 $zorroa-gray       : #808080;
