--- a/src/components/Racetrack/Racebar.scss
+++ b/src/components/Racetrack/Racebar.scss
@@ -6,11 +6,9 @@
   @include fullWidth;
   z-index: 1;
   box-shadow: 0 0 6px $zorroa-gray;
-  padding-left: 8px;
-  padding-right: 8px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding: 8px;
 
+  background-color: white;
   .dark & {
     background-color: black;
     box-shadow: none;
