Track stack counts to compute loadedCount and filteredCount.

--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -83,6 +83,10 @@
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
+
+    .dark & {
+      background-color: $zorroa-darkgray;
+    }
   }
 }
 
