Save searches & share saved search links
Load search via query param.
Save search in session storage & restore on page reload.

--- a/src/components/Searchbar/Searchbar.scss
+++ b/src/components/Searchbar/Searchbar.scss
@@ -26,3 +26,16 @@
   font-style: italic;
   color: $zorroa-orangish;
 }
+
+.Searchbar-share {
+  &:hover { background-color: $zorroa-sickly-green; }
+  padding: 0 5px;
+  cursor: pointer;
+  height: 28px;
+  @include flexCenter;
+}
+.Searchbar-load {
+  &:hover { background-color: $zorroa-sickly-green; }
+  padding: 0 5px;
+  cursor: pointer;
+}
