--- a/src/components/Metadata/Metadata.scss
+++ b/src/components/Metadata/Metadata.scss
@@ -1,13 +1,13 @@
 @import '../../styles/core-mixins.scss';
 
-.Metadata2 {
+.Metadata {
 
   background-color: white;
 
   &.dark { background-color: rgba(0,0,0,0.65); }
 
   @include flexCol;
-  .Metadata2-header {
+  .Metadata-header {
     @include flexRow;
     @include flexJustifySpaceBetween;
     @include flexAlignItemsCenter;
@@ -17,10 +17,10 @@
     min-height: 44px;
     border-bottom: 1px solid $zorroa-nearwhite;
 
-    .Metadata2.dark & { border-bottom: 1px solid $zorroa-darkgray; }
+    .Metadata.dark & { border-bottom: 1px solid $zorroa-darkgray; }
   }
 
-  .Metadata2-body {
+  .Metadata-body {
     margin-bottom: 10px;
     position: relative;
     max-height: 100%;
@@ -29,10 +29,10 @@
   }
 }
 
-.Metadata2-scroll {
+.Metadata-scroll {
 }
 
-.Metadata2-favorites {
+.Metadata-favorites {
   @include flexRowCenter;
   margin-left: 4px;
   margin-right: 8px;
@@ -44,7 +44,7 @@
   cursor: pointer;
   border: none;
 
-  .Metadata2.dark & {
+  .Metadata.dark & {
     color: $zorroa-gray;
     background-color: $zorroa-darkgray;
   }
@@ -57,27 +57,27 @@
   }
 }
 
-.Metadata2-nulls {
-  @extend .Metadata2-favorites;
+.Metadata-nulls {
+  @extend .Metadata-favorites;
   margin-left: 8px;
   margin-right: 4px;
   &.isSelected {
     color: darkred;
-    .Metadata2.dark & { color: darkred; }
+    .Metadata.dark & { color: darkred; }
   }
 }
 
-.Metadata2-item-widget {
+.Metadata-item-widget {
   @include flexRowCenter;
   font-size: 12px;
   color: $zorroa-lightgray;
   width: 25px;
   height: 25px;
 
-  .Metadata2.dark & { color: $zorroa-darkgray; }
+  .Metadata.dark & { color: $zorroa-darkgray; }
 }
 
-.Metadata2-resizer {
+.Metadata-resizer {
   position: absolute;
   top: 0;
   width: 5px;
@@ -85,7 +85,7 @@
   cursor: col-resize;
 }
 
-.Metadata2-namespace {
+.Metadata-namespace {
   @include flexRow;
   @include flexJustifySpaceBetween;
   padding: 8px;
@@ -94,18 +94,18 @@
   font-weight: 500;
   color: $zorroa-darkgray;
 
-  .Metadata2.dark & {
+  .Metadata.dark & {
     border-top: 1px solid $zorroa-darkgray;
     color: $zorroa-lightgray;
   }
 
   &:not(.isSelected):hover {
     background-color: $zorroa-hover;
-    .Metadata2.dark & { background-color: $zorroa-dark-hover; }
+    .Metadata.dark & { background-color: $zorroa-dark-hover; }
   }
 }
 
-.Metadata2-namespace-toggle {
+.Metadata-namespace-toggle {
   font-size: 10px;
   font-weight: 100;
 
@@ -116,7 +116,7 @@
   }
 }
 
-.Metadata2-leaf {
+.Metadata-leaf {
   @include flexRow;
   @include flexAlignItemsCenter;
   align-items: stretch;
@@ -125,7 +125,7 @@
 
   &:not(.isSelected):hover {
     background-color: $zorroa-hover;
-    .Metadata2.dark & { background-color: $zorroa-nearblack; }
+    .Metadata.dark & { background-color: $zorroa-nearblack; }
   }
   &.isSelected {
     background-color: $zorroa-selected;
@@ -133,14 +133,14 @@
   }
 }
 
-.Metadata2-leaf-title {
+.Metadata-leaf-title {
   @include flexRow;
   @include flexAlignItemsStart;
   cursor: default;
   padding-top: 6px;
 }
 
-.Metadata2-leaf-title-head {
+.Metadata-leaf-title-head {
   @include noSelect;
   @include clampText;
   @include nowrap;
@@ -152,10 +152,10 @@
   color: $zorroa-gray;
   font-weight: 400;
 
-  .Metadata2.dark & { color: $zorroa-gray; }
+  .Metadata.dark & { color: $zorroa-gray; }
 }
 
-.Metadata2-leaf-title-tail {
+.Metadata-leaf-title-tail {
   @include noSelect;
   @include clampText;
   @include nowrap;
@@ -168,53 +168,53 @@
   font-weight: 400;
   margin-left: 4px;
 
-  .Metadata2.dark & { color: $zorroa-gray; }
+  .Metadata.dark & { color: $zorroa-gray; }
 }
 
-.Metadata2-value {
+.Metadata-value {
   border-left: 1px solid $zorroa-nearwhite;
-  .Metadata2.dark & { border-left: 1px solid $zorroa-darkgray; }
+  .Metadata.dark & { border-left: 1px solid $zorroa-darkgray; }
   @include flexOn;
   @include flexRow;
   @include flexJustifySpaceBetween;
   @include flexAlignItemsCenter;
 }
 
-.Metadata2-value-various {
+.Metadata-value-various {
   border-left: 1px solid $zorroa-nearwhite;
   color: $zorroa-lightgray;
   font-style: italic;
   padding: 4px;
   font-size: 12px;
-  .Metadata2.dark & {
+  .Metadata.dark & {
     color: $zorroa-gray;
     border-left: 1px solid $zorroa-darkgray;
   }
 }
 
-.Metadata2-value-null {
+.Metadata-value-null {
   border-left: 1px solid $zorroa-nearwhite;
   padding: 4px;
   color: $zorroa-lightgray;
   font-style: italic;
   font-size: 12px;
-  .Metadata2.dark & {
+  .Metadata.dark & {
     color: $zorroa-gray;
     border-left: 1px solid $zorroa-darkgray;
   }
 }
 
-.Metadata2-no-assets {
+.Metadata-no-assets {
   @include flexColCenter;
   color: $zorroa-lightgray;
   margin-top: 10px;
   padding-bottom: 20px;
-  .Metadata2.dark & { color: $zorroa-darkgray; }
+  .Metadata.dark & { color: $zorroa-darkgray; }
 }
 
-.Metadata2-no-assets-icon {
+.Metadata-no-assets-icon {
   margin-bottom: 10px;
   font-size: 40px;
   color: $zorroa-lightgray;
-  .Metadata2.dark & { color: $zorroa-gray; }
+  .Metadata.dark & { color: $zorroa-gray; }
 }
