--- a/src/components/Racetrack/Multipage.scss
+++ b/src/components/Racetrack/Multipage.scss
@@ -6,7 +6,37 @@
   color: $zorroa-gray;
 }
 
+.Multipage-parent {
+  margin: 20px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+}
+
+.Multipage-parent-close {
+  position: absolute;
+  top: -4px;
+  right: -4px;
+  color: $zorroa-whitegray;
+
+  &:hover { color: $zorroa-faded-red; }
+}
+
 .Multipage-sort {
   @include flexRow;
   @include flexAlignItemsCenter;
+  margin: 10px;
+  input { margin-right: 10px; }
+}
+
+.Multipage-toggle {
+  @include flexRow;
+  @include flexAlignItemsCenter;
+}
+
+.Multipage-label {
+  margin: 10px;
+  cursor: pointer;
+  &:hover { color: $zorroa-sickly-green; }
 }
