--- a/src/components/Racetrack/Multipage.scss
+++ b/src/components/Racetrack/Multipage.scss
@@ -26,7 +26,9 @@
 .Multipage-sort {
   @include flexRow;
   @include flexAlignItemsCenter;
-  margin: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
   input { margin-right: 10px; }
 }
 
