Change green hover color for Amber.

--- a/src/components/AssetPermissions/AssetPermissions.scss
+++ b/src/components/AssetPermissions/AssetPermissions.scss
@@ -41,7 +41,7 @@
   text-transform: uppercase;
   @include nowrap;
   &.disabled { background-color: $zorroa-lightgray; }
-  &:hover:not(.disabled) { background-color: lighten($zorroa-sickly-green, 15%); }
+  &:hover:not(.disabled) { background-color: $zorroa-hover-green; }
   &:active:not(.disabled) { background-color: $zorroa-water-blue; }
 }
 
