--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -37,6 +37,7 @@ $zorroa-brow-taupe     : #7b5f52;
 $zorroa-blue-taupe     : #5a7a7e;
 $zorroa-purple-taupe   : #786974;
 $zorroa-orange-taupe   : #7d6358;
+$zorroa-hover-green    : #4F7F15;
 
 // A few extra useful colors Amber didn't specify
 
