--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -46,6 +46,15 @@
   -moz-background-clip: text;
   background-clip: text;
   line-height: 1.5em;
+  @include flexOn;
+  @include flexCol;
+  @include flexAlignItemsCenter;
+  @include flexJustifyStart;
+
+  .dark & {
+    background-color: $zorroa-darkgray;
+    text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
+  }
 
   /* Copied from Racetrack.scss. Should we share? */
   button {
@@ -64,6 +73,7 @@
       background-color: #a5a5a5;
       color: $zorroa-lightgray;
       font-weight: 500;
+      .dark & { background-color: $zorroa-dimgray; }
     }
 
     &:active {
@@ -85,6 +95,7 @@
     background-clip: text;
 
     .dark & {
+      text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
       background-color: $zorroa-darkgray;
     }
   }
